fixing some color contrast issues

--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -36,6 +36,7 @@ h2 {
 a {
     padding: 1rem;
     font-size: medium;
+    color: #000000;
 }
 
 p {
